--- a/LibraTestProj/LibraTestDLL/LibraTestDLL.vcxproj.filters
+++ b/LibraTestProj/LibraTestDLL/LibraTestDLL.vcxproj.filters
@@ -174,7 +174,7 @@
     <ClInclude Include="PlayerGoggleState.h">
       <Filter>ヘッダー ファイル\Player</Filter>
     </ClInclude>
-    <ClInclude Include="AttractParticle.h">
+    <ClInclude Include="AttractParticleManager.h">
       <Filter>ヘッダー ファイル\Gimmick</Filter>
     </ClInclude>
     <ClInclude Include="AttractParticleTmp.h">
@@ -299,11 +299,14 @@
     <ClCompile Include="PlayerGoggleState.cpp">
       <Filter>ソース ファイル\Player</Filter>
     </ClCompile>
-    <ClCompile Include="AttractParticle.cpp">
+    <ClCompile Include="AttractParticleManager.cpp">
       <Filter>ソース ファイル\Gimmick</Filter>
     </ClCompile>
     <ClCompile Include="AttractParticleTmp.cpp">
       <Filter>ソース ファイル\Gimmick</Filter>
+    </ClCompile>
+    <ClCompile Include="AttractParticleEmitter.cpp">
+      <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
